[handler] Fixed: path id, swagger
