# docs/swagger.json
@@ -106,7 +106,7 @@
                     {
                         "type": "integer",
                         "description": "Category Id",
-                        "name": "CategoryId",
+                        "name": "categoryId",
                         "in": "path",
                         "required": true
                     }
@@ -143,7 +143,7 @@
                     {
                         "type": "integer",
                         "description": "Category Id path",
-                        "name": "CategoryId",
+                        "name": "categoryId",
                         "in": "path",
                         "required": true
                     },
@@ -262,7 +262,7 @@
                     {
                         "type": "integer",
                         "description": "Product Id",
-                        "name": "ProductId",
+                        "name": "productId",
                         "in": "path",
                         "required": true
                     },
@@ -308,7 +308,7 @@
                     {
                         "type": "integer",
                         "description": "Product Id",
-                        "name": "ProductId",
+                        "name": "productId",
                         "in": "path",
                         "required": true
                     }
